<resources>
    <string name="app_name">Ikeshamvugo</string>
    <string name="learn_kinyarwanda">Ntibavuga Bavuga</string>
    <string name="email">Imeli</string>
    <string name="password">Ijambo banga</string>
    <string name="sign_in">Injira</string>
    <string name="name">Amazina</string>
    <string name="create_account">Fungura Konti</string>
    <string name="signup">Fungura Konti</string>
    <string name="greetings">Greetings</string>
    <string name="numbers">Imibare</string>
    <string name="colors">Amabara</string>
    <string name="upload_module_icon">Shyiramo ifoto</string>
    <string name="level">Ikiciro</string>
    <string name="module_name">Isomo</string>
    <string name="create_module">Isomo rishya</string>
    <string name="create">Rema</string>
    <string name="goto_login">Usanganywe Konti? Injira</string>
    <string name="goto_signup">Nta konti usanganywe? Fungura</string>
    <string name="learners">Abanyeshuri</string>
    <string name="levels">Ibyiciro</string>
    <string name="modules">Amasomo</string>
    <string name="logout">Sohoka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_level">Ongeramo Ikiciro</string>
    <string name="level_name">Ikiciro</string>
    <string name="ntibavuga">Ntibavuga</string>
    <string name="bavuga">Bavuga</string>
    <string name="new_word">Injiza ijambo ryo kwiga</string>
    <string name="brief_explanation">Ubusobanuro buke</string>
    <string name="upload_content">Shyiramo ibyigwa</string>
    <string name="upload">Ohereza</string>
    <string name="selected_file_name">Hitamo urupapuro</string>
    <string name="choose_file">Hitamo urupapuro</string>
    <string name="profile">Umwirondoro</string>
    <string name="upload_quiz">Shyiramo Ibibazo</string>
    <string name="question">Ikibazo</string>
    <string name="choices">Amahitamo (Atandukanijwe na , Urugero: Amirire,Ikivuguto)</string>
    <string name="right_choice">Igisubizo cy\'ukuri</string>
    <string name="new_question">Injiza ikibazo cyo gukora</string>
    <string name="add">Injiza</string>
    <string name="quiz">Isuzumabumenyi</string>
    <string name="submit">Ohereza</string>
    <string name="update">Hindura</string>
    <string name="update_question">Hindura ikibazo</string>
    <string name="update_word">Hindura ijambo ryo kwiga</string>
    <string name="update_module">Hindura Isomo</string>
    <string name="update_level">Hindura Ikiciro</string>
    <string name="report">Raporo</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string-array name="reportFilters">
        <item>Passed courses</item>
        <item>Not yet passed any module</item>
        <item>Login history</item>
    </string-array>
</resources>