<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    >
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splashscreen"
            android:layout_width="97dp"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_menu_book_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_kinyarwanda"
            android:textAllCaps="true"
            android:visibility="visible"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/top_round_container"
    android:layout_marginTop="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        style="@style/header"
        android:gravity="center" />
    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginTop="30dp"
        style="@style/edit_text_style"/>
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        style="@style/edit_text_style"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/gotosignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_signup"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:layout_marginTop="7dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:backgroundTint="@color/button_green"
        app:cornerRadius="10dp"
        android:layout_gravity="center"
        android:paddingVertical="15dp"
        />
</LinearLayout>

</LinearLayout>