<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashscreen"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_menu_book_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:gravity="center"
            android:text="@string/learn_kinyarwanda"
            android:textAllCaps="true"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/top_round_container"
        android:orientation="vertical">

        <TextView
            style="@style/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/upload_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvChooseFile"
            style="@style/edit_text_style"
            android:layout_marginTop="30dp"
            android:hint="@string/choose_file"
            android:drawableStart="@drawable/baseline_upload_file_24"
            android:drawablePadding="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpload"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/button_green"
            android:paddingVertical="15dp"
            android:text="@string/upload"
            android:textSize="20sp"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>