<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.learningplatform.AddLevel"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:visibility="gone">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/logoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/splashscreen"
            android:layout_width="97dp"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_menu_book_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_kinyarwanda"
            android:textAllCaps="true"
            android:visibility="visible"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/top_round_container"
        android:layout_marginTop="140dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_level"
            style="@style/header"
            android:gravity="center" />
        <EditText
            android:id="@+id/edtLevel"
            style="@style/edit_text_style"
            android:hint="@string/level_name"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:backgroundTint="@color/button_green"
            app:cornerRadius="10dp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            />
    </LinearLayout>

</LinearLayout>