<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cyberawareness.UpdateLevelActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/logoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="60dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/top_round_container"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_level"
            style="@style/header"
            android:gravity="center" />
        <ImageView
            android:id="@+id/iconPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/light_green"
            app:cornerRadius="10dp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            android:textStyle="normal"
            android:textColor="@color/text_color"
            android:text="@string/upload_module_icon"
            android:drawableEnd="@drawable/baseline_upload_file_24"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/edtLevel"
            style="@style/edit_text_style"
            android:hint="@string/level_name"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:backgroundTint="@color/button_green"
            app:cornerRadius="10dp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            />
    </LinearLayout>

</LinearLayout>