<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.learningplatform.AddModuleActivity"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:visibility="gone">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/top_round_container"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_module"
            style="@style/header"
            android:gravity="center" />
        <ImageView
            android:id="@+id/iconPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:backgroundTint="@color/light_green"
            app:cornerRadius="10dp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            android:textStyle="normal"
            android:textColor="@color/text_color"
            android:text="@string/upload_module_icon"
            android:drawableEnd="@drawable/baseline_upload_file_24"
            android:layout_marginTop="30dp"/>
        <Spinner
            android:id="@+id/spnLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_text_style"
            android:layout_marginTop="10dp"

            />
        <EditText
            android:id="@+id/edtLevel"
            android:hint="@string/module_name"
            android:layout_marginTop="15dp"
            style="@style/edit_text_style"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:backgroundTint="@color/button_green"
            app:cornerRadius="10dp"
            android:layout_gravity="center"
            android:paddingVertical="15dp"
            />
    </LinearLayout>

</LinearLayout>